--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "outDir": "dist",
     "allowJs": true,
+    "declaration": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
