--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": false,
   "dependencies": {
     "@autofiy/property": "^1.0.2",
-    "@autofiy/rac-core": "^1.1.0"
+    "@autofiy/rac-core": "^1.1.0",
+    "react": "^16.13.1",
+    "@material-ui/core": "^4.11.1"
   },
   "main": "build/main.js",
   "types": "build/main.d.ts",
   "devDependencies": {
-    "@material-ui/core": "^4.11.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "typescript": "^4.1.2"
