--- a/package.json
+++ b/package.json
@@ -1,49 +1,47 @@
 {
-  "name": "@autofiy/rac-material",
-  "version": "1.1.0",
-  "private": false,
-  "dependencies": {
-    "@autofiy/property": "^1.0.2",
-    "@autofiy/rac-core": "^1.1.0",
-    "react": "^16.13.1",
-    "@material-ui/core": "^4.11.1"
-  },
-  "main": "build/main.js",
-  "types": "build/main.d.ts",
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "typescript": "^4.1.2"
-  },
-  "scripts": {
-    "start": "npm run serve & react-scripts start",
-    "serve": "node ./test-server/server.js",
-    "build": "tsc --noEmit false",
-    "test": "react-scripts test",
-    "deploy": "rm -rf build && npm run build && npm publish --access=public",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "@autofiy/rac-material",
+    "version": "1.2.0",
+    "private": false,
+    "dependencies": {
+        "@autofiy/property": "^1.0.2",
+        "@autofiy/rac-core": "^1.2.0",
+        "react": "^17.0.1",
+        "@material-ui/core": "^4.11.1"
+    },
+    "main": "build/main.js",
+    "types": "build/main.d.ts",
+    "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-react": "^7.12.10",
+        "@types/enzyme": "^3.10.8",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/jest": "^26.0.19",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+        "babel-loader": "^8.2.2",
+        "cors": "^2.8.5",
+        "enzyme": "^3.11.0",
+        "express": "^4.17.1",
+        "fork-ts-checker-webpack-plugin": "^6.0.8",
+        "html-webpack-plugin": "^4.5.0",
+        "jest": "^26.6.3",
+        "jest-mock-extended": "^1.0.10",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "ts-jest": "^26.4.4",
+        "ts-loader": "^8.0.12",
+        "typescript": "^4.1.3",
+        "webpack": "^5.11.0",
+        "webpack-cli": "^4.3.0",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "scripts": {
+        "start": "npm run serve & webpack serve",
+        "build": "tsc --noEmit false",
+        "test": "jest",
+        "deploy": "rm -rf build && npm run build && npm publish --access=public",
+        "serve": "node ./test-server/server.js"
+    }
 }
